第二次资源

--- a/center-server/src/main/resources/static/html/index/Excel/ExcelGrid.html
+++ b/center-server/src/main/resources/static/html/index/Excel/ExcelGrid.html
@@ -45,6 +45,10 @@
 
 		function synClick() {
 			var rows = g.getSelectedRow();
+			if(rows==undefind||rows==null){
+				$.ligerDialog.error("没有选中任何资源服");
+				return;
+			}
 			var path="../../../"+AUTH+"uploadExcel";
 			console.log(rows);
 			var url=path+"?sessionId="
