--- a/center-server/src/main/resources/static/html/index/Excel/ExcelGrid.html
+++ b/center-server/src/main/resources/static/html/index/Excel/ExcelGrid.html
@@ -21,7 +21,7 @@
 			window['g']  = $("#maingrid4").ligerGrid({
 				columns: [{
 						name: 'serverId',
-						display: '区服id',
+						display: '服务器id',
 						width: 200
 					},
 					{
@@ -30,7 +30,11 @@
 						width: 200
 					}, {
 						name: 'filePath',
-						display: '路径',
+						display: '资源路径',
+						width: 200
+					},{
+						name: 'url',
+						display: '服务器ip',
 						width: 200
 					}
 				],
@@ -38,7 +42,8 @@
 				rownumbers: true,
 				width: "100%",
 				height: "100%",
-				data: ZoneList
+				data: ZoneList,
+				checkbox: true
 			});
 
 		});
