--- a/center-server/src/main/resources/static/html/index/Excel/ExcelGrid-dev.html
+++ b/center-server/src/main/resources/static/html/index/Excel/ExcelGrid-dev.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="../../lib/jquery/jquery-1.9.0.min.js"></script>
 		<script type="text/javascript" src="../../lib/ligerUI/js/ligerui.min.js"></script>
 		<script type="text/javascript" src="../CommandCode.js"></script>
-		<script type="text/javascript" src="ZoneList.js"></script>
+		<script type="text/javascript" src="ZoneList-dev.js"></script>
 		<script type="text/javascript" src="../APIManager.js"></script>
 		<link href="../../lib/ligerUI/skins/ligerui-icons.css" rel="stylesheet" type="text/css" />
 	</head>
