--- a/gproject-center/res/static/html/index/Excel/ExcelGrid-dev.html
+++ b/gproject-center/res/static/html/index/Excel/ExcelGrid-dev.html
@@ -19,23 +19,28 @@
 
 		$(function() {
 			window['g']  = $("#maingrid4").ligerGrid({
-				columns: [{
-						name: 'logicId',
-						display: '服务器id',
+				columns: [
+					{
+						name: 'name',
+						display: '文件名称',
 						width: 200
 					},
 					{
-						name: 'name',
-						display: '区服名称',
+						name: 'detailLink',
+						display: '文件数据详情',
+						width: 200
+					},
+					{
+						name: 'javaFile',
+						display: 'JAVA文件数据详情',
 						width: 200
 					}
 				],
-				pkName: 'serverId',
+				pkName: 'name',
 				rownumbers: true,
 				width: "100%",
 				height: "100%",
-				url:"../../../"+AUTH+ "getFiles",
-				checkbox: true
+				url:"../../../"+AUTH+ "getFiles"
 			});
 
 		});
@@ -44,9 +49,7 @@
 	</script>
 
 	<body>
-                    <input type="file" id="file1" />
-		<a class="l-button" style="width:120px" onclick="synClick()">开始同步服务器数据</a>
-
+             
 		<div id="maingrid4" style="margin:0; padding:0"></div>
 
 		</div>
